hphp/hack/test/typecheck/ppl/implements_interface.php.exp
File "implements_interface.php", line 9, characters 7-16:
a class annotated with <<__PPL>> cannot implement non <<__PPL>> interface: BaseInterface (Typing[4257])
File "implements_interface.php", line 5, characters 11-23:
Declaration is here
