hphp/hack/test/typecheck/ppl/implements_interface.php
<?hh // strict

// A ppl class can only implement ppl interfaces

interface BaseInterface {
}

<<__PPL>>
class ChildClass implements BaseInterface {
}
